corrected css for rejection block and button-wrap

--- a/blocks/ageverification/ageverification.css
+++ b/blocks/ageverification/ageverification.css
@@ -114,7 +114,7 @@ main .ageverification-container {
     text-align: center;
     color: #002855;
     text-transform: uppercase;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .ageverification .agegate-logo {
